objects/Life_Style__c.object
<CustomObject>
    <fields>
        <fullName>Aches_and_Pain_AGPAIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aches and Pain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ailment_Present_Any__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ailment Present - Any</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allergies_and_Sinuses_AGNOSE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allergies and Sinuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Living_Well__c</fullName>
        <label>Living Well</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leading The Way</fullName>
                </value>
                <value>
                    <fullName>In It For Fun</fullName>
                </value>
                <value>
                    <fullName>Value Independence</fullName>
                </value>
                <value>
                    <fullName>I Need a Plan</fullName>
                </value>
                <value>
                    <fullName>Not Right Now</fullName>
                </value>
                <value>
                    <fullName>Get Through the Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Life Styles</relationshipLabel>
        <relationshipName>Life_Styles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cancer_AGCANCER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cholesterol_and_Blood_Pressure_AGBLOOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cholesterol and Blood Pressure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diabetes_AGDIAB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digestive_AGDIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digestive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_It_Yourself__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do It Yourself</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Female_Conditions_AGFEM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Female Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fine_Arts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fine Arts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foot_AGFOOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Index_Illness_or_Condition_To__c</fullName>
        <label>Health Index - Illness or Condition To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Bus_of_Health_To__c</fullName>
        <label>Health Index Manage Bus of Health To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Bus_of_Health__c</fullName>
        <label>Health Index - Manage Bus of Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Bus_of_Health_ranges__c</fullName>
        <label>Health Index Manage Bus of Health ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Health_From__c</fullName>
        <label>Health Index - Manage Health From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Health_To__c</fullName>
        <label>Health Index - Manage Health To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Health_ranges__c</fullName>
        <label>Health Index Manage Health ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Illness_Cond_ranges__c</fullName>
        <label>Health Index Manage Illness Cond ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Index_Manage_Illness_Condition_Fr__c</fullName>
        <label>Health Index - Illness or Condition From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Wear_Dev_to_Manage_Health_T__c</fullName>
        <label>Health Index Wear Dev to Manage Health T</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Wear_Dev_to_Manage_Health__c</fullName>
        <label>Health Index - Wear Dev to Manage Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Index_Weardevto_managehealth_rang__c</fullName>
        <label>Health Index Weardevto managehealth rang</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Ins_Direct_Pay_Index_From__c</fullName>
        <label>Health Ins Direct Pay Index From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Direct_Pay_Index_To__c</fullName>
        <label>Health Ins Direct Pay Index To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Engagement_Index_From__c</fullName>
        <label>Health Ins Engagement Index From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Engagement_Index_To__c</fullName>
        <label>Health Ins Engagement Index To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Influence_Index_From__c</fullName>
        <label>Health Ins Influence Index From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Influence_Index_To__c</fullName>
        <label>Health Ins Influence Index To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Pay_Index_ranges__c</fullName>
        <label>Health Ins Pay Index ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Ins_Prem_Tolerance_Index__c</fullName>
        <label>Health Ins Prem Tolerance Index from</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Prem_Tolerance_Index_to__c</fullName>
        <label>to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Subsidy_Ind__c</fullName>
        <label>Subsidy Indicator</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>May qualify for Medicaid</fullName>
                </value>
                <value>
                    <fullName>May qualify for tax credits only</fullName>
                </value>
                <value>
                    <fullName>May qualify for tax credits and reduced cost sharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Ins_Subsidy_Ind_to__c</fullName>
        <label>to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_ins_engagement_index_ranges__c</fullName>
        <label>Health ins engagement index ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_ins_influence_index_ranges__c</fullName>
        <label>Health ins influence index ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_ins_prem_tolerance_index_ranges__c</fullName>
        <label>Health ins prem tolerance index ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcare_Treatment_Pref__c</fullName>
        <label>Healthcare Treatment Pref</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal doctor or personal care physician</fullName>
                </value>
                <value>
                    <fullName>Community health clinic or health clinic in retail setting</fullName>
                </value>
                <value>
                    <fullName>Hospital or standalone emergency room or urgent care center</fullName>
                </value>
                <value>
                    <fullName>Other or None Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heart_Condition_AGHEART__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heart Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Spine_AGJOINT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint/Spine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Male_Conditions_AGMALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Male Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medicare_Supplement_Ins_Rspnder_Idx_from__c</fullName>
        <label>Medicare Supplement Ins Responder Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_Supplement_Ins_Rspnder_Idx_to__c</fullName>
        <label>to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medicare_supplement_ins_respond_ind_rang__c</fullName>
        <label>Medicare supplement ins respond ind rang</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility_Problems_and_Assistance_AGAST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobility Problems and Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mouth_and_Teeth_AGMOUTH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mouth and Teeth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outdoor_Enthusiasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdoor Enthusiasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physically_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progressive_Conditions_AGPROG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progressive Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Psychological_Behavioral_AGPSYCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Psychological/Behavioral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respiratory_AGRESP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respiratory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skin_AGSKIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sports_Enthusiasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sports Enthusiasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Techies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Techies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uninsured_Index__c</fullName>
        <label>Uninsured Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uninsured_Index_to__c</fullName>
        <label>to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uninsured_index_ranges__c</fullName>
        <label>Uninsured index ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_Town__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Up Town</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>